# rs-obsidian-article-cache

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  db.rs  main.rs  models.rs  output.rs  parser.rs  scanner.rs
tests/: integration.rs
tests/fixtures/: complete_paper.md  minimal_paper.md  na_fields.md  no_tag.md
